--- a/IsuruDhanisha-COBSCCOMP192P-037/Views/Base.lproj/Main.storyboard
+++ b/IsuruDhanisha-COBSCCOMP192P-037/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wla-hg-f9d">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -394,7 +394,7 @@
         <!--Store-->
         <scene sceneID="bFi-q8-oeK">
             <objects>
-                <viewController title="Store" id="wla-hg-f9d" customClass="MainViewController" customModule="IsuruDhanisha_COBSCCOMP192P_037" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Store" title="Store" id="wla-hg-f9d" customClass="MainViewController" customModule="IsuruDhanisha_COBSCCOMP192P_037" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8db-EB-VB2">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -590,7 +590,7 @@
                                 </prototypes>
                             </tableView>
                             <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="240" translatesAutoresizingMaskIntoConstraints="NO" id="g1h-9A-yeC">
-                                <rect key="frame" x="20" y="761" width="934" height="52"/>
+                                <rect key="frame" x="20" y="761" width="743" height="52"/>
                                 <subviews>
                                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="XSr-qC-MGT">
                                         <rect key="frame" x="0.0" y="0.0" width="129" height="52"/>
@@ -606,7 +606,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="TzD-q5-WBL">
-                                        <rect key="frame" x="614" y="0.0" width="320" height="52"/>
+                                        <rect key="frame" x="614" y="0.0" width="129" height="52"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="52" id="itb-QH-sXi"/>
                                             <constraint firstAttribute="width" constant="129" id="sde-di-vEr"/>
@@ -778,7 +778,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="le2-gw-3Q2">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="le2-gw-3Q2">
                                 <rect key="frame" x="90" y="283" width="234" height="164"/>
                                 <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                             </imageView>
@@ -845,7 +845,7 @@
                     </view>
                     <connections>
                         <outlet property="CategoryId" destination="tWb-Z3-Wcr" id="eGM-fg-2gN"/>
-                        <outlet property="ImageView" destination="le2-gw-3Q2" id="LIY-hO-iRe"/>
+                        <outlet property="ImageView" destination="le2-gw-3Q2" id="PRQ-Wt-izF"/>
                         <outlet property="txtDescription" destination="Htw-O6-MYa" id="rNf-3e-KSn"/>
                         <outlet property="txtDiscount" destination="ss6-B1-yZJ" id="PLa-RW-NRT"/>
                         <outlet property="txtName" destination="GlW-OF-a1g" id="aKn-Za-RrU"/>
